<resources>
    <string name="app_name">MapBox</string>
    <string name="action_settings">Settings</string>
    <string name="map_location_me">Me</string>
    <string name="permission_alert_title">Permission requise</string>
    <string name="permission_alert_location">Pour un service de meilleur qualité, l\'application a besoin de vous localiser</string>
    <string name="permission_alert_button_ok">OK</string>
    <string name="map_button_search">GO</string>
    <string name="address_found">adresse trouvée</string>
    <string name="shared_pref_key">pref_key</string>

    <string name="button_mapbox">Use Mapbox</string>
    <string name="button_maps">Use Google Maps</string>
    <string name="beautiful_wallpaper">content_description_background_wallpaper</string>
    <string name="textview_splash_title">Demo Training</string>
    <string name="textview_splash_credits">Made by Kelvin Hado for ChauffeurPrivé</string>
    <string name="textview_drawer_recents_places">Addresses récentes :</string>
</resources>
